Add removeNote api endpoint
